# m-automaticontratos-api/swagger_server/models/__init__.py
@@ -4,12 +4,16 @@
 from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.campana import Campana
+from swagger_server.models.cliente_suspendido import ClienteSuspendido
 from swagger_server.models.e_archivos400 import EArchivos400
+from swagger_server.models.m_cliente_suspendido import MClienteSuspendido
 from swagger_server.models.request_archivos import RequestArchivos
 from swagger_server.models.request_create_campana import RequestCreateCampana
 from swagger_server.models.request_create_process import RequestCreateProcess
 from swagger_server.models.request_create_process_proceso import RequestCreateProcessProceso
+from swagger_server.models.request_create_suspendidos import RequestCreateSuspendidos
 from swagger_server.models.request_lectura import RequestLectura
+from swagger_server.models.request_modify_suspendidos import RequestModifySuspendidos
 from swagger_server.models.response_archivos import ResponseArchivos
 from swagger_server.models.response_ev_archivos import ResponseEVArchivos
 from swagger_server.models.response_error import ResponseError
